@@ -287,161 +287,6 @@ operator|new
 name|RootKeyComparator
 argument_list|()
 decl_stmt|;
-comment|/**    * Comparator that compares the family portion of columns only.    * Use this making NavigableMaps of Stores or when you need to compare    * column family portion only of two column names.    */
-specifier|public
-specifier|static
-specifier|final
-name|RawComparator
-argument_list|<
-name|byte
-index|[]
-argument_list|>
-name|FAMILY_COMPARATOR
-init|=
-operator|new
-name|RawComparator
-argument_list|<
-name|byte
-index|[]
-argument_list|>
-argument_list|()
-block|{
-specifier|public
-name|int
-name|compare
-parameter_list|(
-name|byte
-index|[]
-name|a
-parameter_list|,
-name|int
-name|ao
-parameter_list|,
-name|int
-name|al
-parameter_list|,
-name|byte
-index|[]
-name|b
-parameter_list|,
-name|int
-name|bo
-parameter_list|,
-name|int
-name|bl
-parameter_list|)
-block|{
-name|int
-name|indexa
-init|=
-name|KeyValue
-operator|.
-name|getDelimiter
-argument_list|(
-name|a
-argument_list|,
-name|ao
-argument_list|,
-name|al
-argument_list|,
-name|COLUMN_FAMILY_DELIMITER
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|indexa
-operator|<
-literal|0
-condition|)
-block|{
-name|indexa
-operator|=
-name|al
-expr_stmt|;
-block|}
-name|int
-name|indexb
-init|=
-name|KeyValue
-operator|.
-name|getDelimiter
-argument_list|(
-name|b
-argument_list|,
-name|bo
-argument_list|,
-name|bl
-argument_list|,
-name|COLUMN_FAMILY_DELIMITER
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|indexb
-operator|<
-literal|0
-condition|)
-block|{
-name|indexb
-operator|=
-name|bl
-expr_stmt|;
-block|}
-return|return
-name|Bytes
-operator|.
-name|compareTo
-argument_list|(
-name|a
-argument_list|,
-name|ao
-argument_list|,
-name|indexa
-argument_list|,
-name|b
-argument_list|,
-name|bo
-argument_list|,
-name|indexb
-argument_list|)
-return|;
-block|}
-specifier|public
-name|int
-name|compare
-parameter_list|(
-name|byte
-index|[]
-name|a
-parameter_list|,
-name|byte
-index|[]
-name|b
-parameter_list|)
-block|{
-return|return
-name|compare
-argument_list|(
-name|a
-argument_list|,
-literal|0
-argument_list|,
-name|a
-operator|.
-name|length
-argument_list|,
-name|b
-argument_list|,
-literal|0
-argument_list|,
-name|b
-operator|.
-name|length
-argument_list|)
-return|;
-block|}
-block|}
-decl_stmt|;
 comment|/**    * Get the appropriate row comparator for the specified table.    *     * Hopefully we can get rid of this, I added this here because it's replacing    * something in HSK.  We should move completely off of that.    *     * @param tableName  The table name.    * @return The comparator.    */
 specifier|public
 specifier|static
