@@ -459,6 +459,143 @@ comment|// New tests that doesn't spin up a mini cluster but rather just test th
 comment|// individual code pieces in the HRegion. Putting files locally in
 comment|// /tmp/testtable
 comment|//////////////////////////////////////////////////////////////////////////////
+specifier|public
+name|void
+name|testFamilyWithAndWithoutColon
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|byte
+index|[]
+name|b
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+name|getName
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|byte
+index|[]
+name|cf
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"cf"
+argument_list|)
+decl_stmt|;
+name|initHRegion
+argument_list|(
+name|b
+argument_list|,
+name|getName
+argument_list|()
+argument_list|,
+name|cf
+argument_list|)
+expr_stmt|;
+name|Put
+name|p
+init|=
+operator|new
+name|Put
+argument_list|(
+name|b
+argument_list|)
+decl_stmt|;
+name|byte
+index|[]
+name|cfwithcolon
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"cf:"
+argument_list|)
+decl_stmt|;
+name|p
+operator|.
+name|add
+argument_list|(
+name|cfwithcolon
+argument_list|,
+name|cfwithcolon
+argument_list|,
+name|cfwithcolon
+argument_list|)
+expr_stmt|;
+name|boolean
+name|exception
+init|=
+literal|false
+decl_stmt|;
+try|try
+block|{
+name|this
+operator|.
+name|region
+operator|.
+name|put
+argument_list|(
+name|p
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|NoSuchColumnFamilyException
+name|e
+parameter_list|)
+block|{
+name|exception
+operator|=
+literal|true
+expr_stmt|;
+block|}
+name|assertTrue
+argument_list|(
+name|exception
+argument_list|)
+expr_stmt|;
+comment|// Can I add it using old style call?
+name|p
+operator|=
+operator|new
+name|Put
+argument_list|(
+name|b
+argument_list|)
+expr_stmt|;
+name|p
+operator|.
+name|add
+argument_list|(
+name|cfwithcolon
+argument_list|,
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+argument_list|,
+name|cfwithcolon
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|region
+operator|.
+name|put
+argument_list|(
+name|p
+argument_list|)
+expr_stmt|;
+block|}
 comment|//////////////////////////////////////////////////////////////////////////////
 comment|// checkAndPut tests
 comment|//////////////////////////////////////////////////////////////////////////////
